--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="WhatsApp.png" alt="WhatsApp" class="icon">
                 </div>
                 <div class="link-group">
-                    <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz " target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz" target="_blank">Instagram</a>
                     <img src="Insta.png" alt="Instagram" class="icon">
                 </div>
             </div>
@@ -84,12 +84,12 @@
     </section>
 
     <footer>
-        <p>Contact Us: <a href="mailto:your-email@example.com">sorbonkalandarov@gmail.com</a> | <a href="tel:123-456-7890">+1 (718) 600-6278</a></p>
+        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:123-456-7890">+1 (718) 600-6278</a></p>
         <div class="socials">
             <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
             <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
         </div>
- <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
+        <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
