--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <section class="hero">
         <div class="hero-overlay">
-            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center"> <div class="hero-text">
+            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
+            <div class="hero-text">
                 <h1>Making Your Home Perfect</h1>
                 <p>Your Trusted Handyman in NYC</p>
             </div>
