--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <footer>
-        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:123-456-7890">+1 (718) 600-6278</a></p>
+        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
         <div class="socials">
             <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
             <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
