--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Handyman TJ - New York</title>
-    <link rel="icon" href="HandymanTJ.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="HandymanTJ.png" type="image/png" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
             <img src="HandymanTJ.png" alt="Handyman TJ Logo">
         </div>
         <div class="header-right">
-            <span class="location">NEW YORK</span>
+            <span class="location">📍 NEW YORK</span>
             <div class="contact-social">
                 <div class="link-group">
                     <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
@@ -85,9 +86,12 @@
     </section>
 
     <footer>
-        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+        <p>Contact Us: 
+            <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | 
+            <a href="tel:+17186006278">+1 (718) 600-6278</a>
+        </p>
         <div class="socials">
-            <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
+            <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz" target="_blank">Instagram</a>
             <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
         </div>
         <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
