--- a/index.html
+++ b/index.html
@@ -1,105 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Handyman TJ - New York</title>
-  <link rel="icon" href="HandymanTJ.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Handyman TJ - New York</title>
+    <link rel="icon" href="HandymanTJ.png" type="image/png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="HandymanTJ.png" alt="Handyman TJ Logo" />
-    </div>
-    <div class="header-right">
-      <span class="location">NEW YORK</span>
-      <div class="contact-social">
-        <div class="link-group">
-          <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
-          <img src="WhatsApp.png" alt="WhatsApp" class="icon" />
+    <header>
+        <div class="logo">
+            <img src="HandymanTJ.png" alt="Handyman TJ Logo">
         </div>
-        <div class="link-group">
-          <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz" target="_blank">Instagram</a>
-          <img src="Insta.png" alt="Instagram" class="icon" />
+        <div class="header-right">
+            <span class="location">NEW YORK</span>
+            <div class="contact-social">
+                <div class="link-group">
+                    <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
+                    <img src="WhatsApp.png" alt="WhatsApp" class="icon">
+                </div>
+                <div class="link-group">
+                    <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz" target="_blank">Instagram</a>
+                    <img src="Insta.png" alt="Instagram" class="icon">
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <section class="hero">
-    <div class="hero-overlay">
-      <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center" />
-      <div class="hero-text">
-        <h1>Making Your Home Perfect</h1>
-        <p>Your Trusted Handyman in NYC</p>
-      </div>
-    </div>
-  </section>
+    <section class="hero">
+        <div class="hero-overlay">
+            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
+            <div class="hero-text">
+                <h1>Making Your Home Perfect</h1>
+                <p>Your Trusted Handyman in NYC</p>
+            </div>
+        </div>
+    </section>
 
-  <section class="about">
-    <div class="about-content">
-      <div class="about-text">
-        <h2>We've Got You Covered</h2>
-        <p>
-          TJ Handyman Services provides top-notch services that enhance the
-          comfort, functionality, and aesthetic appeal of your home.
-        </p>
-      </div>
-      <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo" />
-    </div>
-  </section>
+    <section class="about">
+        <div class="about-content">
+            <div class="about-text">
+                <h2>We've Got You Covered</h2>
+                <p>TJ Handyman Services provides top-notch services that enhance the comfort, functionality, and aesthetic appeal of your home. We're here to tackle small repairs, larger renovation projects, and routine maintenance.</p>
+            </div>
+            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
+        </div>
+    </section>
 
-  <section class="services">
-    <h2>Our Services</h2>
-    <div class="services-grid">
-      <div class="service">
-        <img src="Plumb.png" alt="Plumbing" />
-        <h3>Plumbing</h3>
-        <p>Fixing leaks, installing fixtures, and more.</p>
-      </div>
-      <div class="service">
-        <img src="Carpentary.png" alt="Carpentry" />
-        <h3>Carpentry</h3>
-        <p>Custom shelves, door fixes, and more.</p>
-      </div>
-      <div class="service">
-        <img src="Paint.png" alt="Painting" />
-        <h3>Painting</h3>
-        <p>Interior and exterior painting services.</p>
-      </div>
-    </div>
-  </section>
+    <section class="services">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+            <div class="service">
+                <img src="Plumb.png" alt="Plumbing">
+                <h3>Plumbing</h3>
+                <p>Fixing leaks, installing fixtures, and more.</p>
+            </div>
+            <div class="service">
+                <img src="Carpentary.png" alt="Carpentry">
+                <h3>Carpentry</h3>
+                <p>Custom shelves, door fixes, and more.</p>
+            </div>
+            <div class="service">
+                <img src="Paint.png" alt="Painting">
+                <h3>Painting</h3>
+                <p>Interior and exterior painting services.</p>
+            </div>
+        </div>
+    </section>
 
-  <section class="gallery">
-    <h2>Our Work</h2>
-    <div class="gallery-grid">
-      <img src="1.jpg" alt="Project 1" />
-      <img src="2.jpg" alt="Project 2" />
-      <img src="3.jpg" alt="Project 3" />
-      <img src="4.jpg" alt="Project 4" />
-      <img src="5.jpg" alt="Project 5" />
-      <img src="6.jpg" alt="Project 6" />
-      <img src="7.jpg" alt="Project 7" />
-      <img src="8.jpg" alt="Project 8" />
-      <img src="9.jpg" alt="Project 9" />
-      <img src="10.jpg" alt="Project 10" />
-    </div>
-  </section>
+    <section class="gallery">
+        <h2>Our Work</h2>
+        <div class="gallery-grid">
+            <img src="1.jpg" alt="Project 1">
+            <img src="2.jpg" alt="Project 2">
+            <img src="3.jpg" alt="Project 3">
+            <img src="4.jpg" alt="Project 4">
+            <img src="5.jpg" alt="Project 5">
+            <img src="6.jpg" alt="Project 6">
+            <img src="7.jpg" alt="Project 7">
+            <img src="8.jpg" alt="Project 8">
+            <img src="9.jpg" alt="Project 9">
+            <img src="10.jpg" alt="Project 10">
+        </div>
+    </section>
 
-  <footer>
-    <p>
-      Contact Us:
-      <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> |
-      <a href="tel:+17186006278">+1 (718) 600-6278</a>
-    </p>
-    <div class="socials">
-      <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
-      <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
-    </div>
-    <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
-  </footer>
+    <footer>
+        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+        <div class="socials">
+            <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
+            <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
+        </div>
+        <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
+    </footer>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
