--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>We've Got You Covered</h2>
-                <p>TJ Handyman Services provides top-notch services that enhance the comfort, functionality, and aesthetic appeal of your home. We're here to tackle small repairs, larger renovation projects, and routine maintenance.</p>
+                <p>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</p>
             </div>
             <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
         </div>
