--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handyman TJ - New York</title>
-    <link rel="icon" href="HandymanTJ.png" type="image/png">
+    <link rel="icon" href="LOGO_HAND.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="HandymanTJ.png" alt="Handyman TJ Logo">
+            <img src="LOGO_HAND.png" alt="Handyman TJ Logo">
         </div>
         <div class="header-right">
             <span class="location">NEW YORK</span>
@@ -29,7 +29,7 @@
 
     <section class="hero">
         <div class="hero-overlay">
-            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
+            <img src="LOGO_HAND.png" alt="Handyman TJ Logo" class="hero-logo-center">
             <div class="hero-text">
                 <h1>Making Your Home Perfect</h1>
                 <p>Your Trusted Handyman in NYC</p>
@@ -43,7 +43,7 @@
                 <h2>We've Got You Covered</h2>
                 <p>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</p>
             </div>
-            <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
+            <img src="LOGO_HAND.png" alt="Handyman TJ Logo" class="about-logo">
         </div>
     </section>
 
