--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>We've Got You Covered</h2>
-                <p>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</p>
+                <h3>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</h3>
             </div>
             <img src="LOGO_HAND.png" alt="Handyman TJ Logo" class="about-logo">
         </div>
