--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <span class="location">NEW YORK</span>
             <div class="contact-social">
                 <div class="link-group">
-                    <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
+                    <a href="" target="_blank">WhatsApp</a>
                     <img src="WhatsApp.png" alt="WhatsApp" class="icon">
                 </div>
                 <div class="link-group">
-                    <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz" target="_blank">Instagram</a>
+                    <a href="" target="_blank">Instagram</a>
                     <img src="Insta.png" alt="Instagram" class="icon">
                 </div>
             </div>
@@ -85,10 +85,10 @@
     </section>
 
     <footer>
-        <p>Contact Us: <a href="mailto:sorbonkalandarov@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+        <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
         <div class="socials">
-            <a href="https://www.instagram.com/stories/shodiktt/3605693136677190334?utm_source=ig_story_item_share&igsh=M3RidzEyOXBvbWoz">Instagram</a>
-            <a href="https://wa.me/17186006278" target="_blank">WhatsApp</a>
+            <a href="">Instagram</a>
+            <a href="" target="_blank">WhatsApp</a>
         </div>
         <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
     </footer>
