--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     <a href="" target="_blank">Instagram</a>
                     <img src="Insta.png" alt="Instagram" class="icon">
                 </div>
+                <div class="link-group">
+                    <a href="https://www.yelp.com/biz/your-yelp-page" target="_blank">Yelp</a>
+                    <img src="Yelp.png" alt="Yelp" class="icon">
+                </div>
             </div>
         </div>
     </header>
@@ -87,8 +91,9 @@
     <footer>
         <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
         <div class="socials">
-            <a href="">Instagram</a>
+            <a href="" target="_blank">Instagram</a>
             <a href="" target="_blank">WhatsApp</a>
+            <a href="https://www.yelp.com/biz/your-yelp-page" target="_blank">Yelp</a>
         </div>
         <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
     </footer>
