--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <img src="Insta.png" alt="Instagram" class="icon">
                 </div>
                 <div class="link-group">
-                    <a href="https://www.yelp.com/biz/your-yelp-page" target="_blank">Yelp</a>
-                    <img src="Yelp.png" alt="Yelp" class="icon">
+                    <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
+                    <img src="YELP.png" alt="Yelp" class="icon">
                 </div>
             </div>
         </div>
