--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="socials">
             <a href="" target="_blank">Instagram</a>
             <a href="" target="_blank">WhatsApp</a>
-            <a href="https://www.yelp.com/biz/your-yelp-page" target="_blank">Yelp</a>
+            <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
         </div>
         <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
     </footer>
