--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
 
     <footer>
-        <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbonkalandarov@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+        <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbon.tj@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
         <div class="socials">
             <a href="" target="_blank">Instagram</a>
             <a href="" target="_blank">WhatsApp</a>
