--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="intro-overlay">
+        <div class="intro-logo-wrapper">
+            <img src="HandymanTJ.png" class="intro-logo" alt="Intro Logo">
+        </div>
+    </div>
+
     <header>
         <div class="logo">
             <img src="HandymanTJ.png" alt="Handyman TJ Logo">
@@ -31,7 +37,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero animated-hero">
         <div class="hero-overlay">
             <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
             <div class="hero-text">
