--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="intro-overlay">
-        <div class="intro-logo-wrapper">
-            <img src="HandymanTJ.png" class="intro-logo" alt="Intro Logo">
+        <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="intro-logo">
+        <div class="intro-text">
+            <h1>Making Your Home Perfect</h1>
+            <p>Your Trusted Handyman in NYC</p>
         </div>
     </div>
 
@@ -37,7 +39,7 @@
         </div>
     </header>
 
-    <section class="hero animated-hero">
+    <section class="hero">
         <div class="hero-overlay">
             <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
             <div class="hero-text">
