--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
      <p>Fixing damaged or loose flooring.</p>
     </div>
     <div class="service">
-     <img src="GeneralInstallation.png" alt="Handyman installation">
-     <h3>Handyman installation</h3>
+     <img src="GeneralInstallation.png" alt="General installation">
+     <h3>General installation</h3>
      <p>Installing fixtures, shelves, and other items.</p>
     </div>
     <div class="service">
