--- a/index.html
+++ b/index.html
@@ -1,86 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insane H Intro Animation Site</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Handyman TJ - New York</title>
+  <link rel="icon" href="HandymanTJ.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- H Intro Animation -->
-    <div class="intro-h-overlay">
-        <span class="intro-h-letter">H</span>
+  <div class="intro-h">
+    <span class="big-h">H</span>
+  </div>
+
+  <header>
+    <div class="logo">
+      <img src="HandymanTJ.png" alt="Handyman TJ Logo">
     </div>
-
-    <!-- Original Site Content -->
-    <header>
-        <div class="logo"><img src="logo.png" alt="Logo"></div>
-        <div class="header-right">
-            <div class="location">Your City</div>
-            <div class="contact-social">
-                <a href="#">Contact</a>
-                <a href="#">Social</a>
-            </div>
-            <div class="link-group">
-                <a href="#about">About</a>
-                <a href="#services">Services</a>
-                <a href="#gallery">Gallery</a>
-            </div>
+    <div class="header-right">
+      <span class="location">NEW YORK</span>
+      <div class="contact-social">
+        <div class="link-group">
+          <a href="" target="_blank">WhatsApp</a>
+          <img src="WhatsApp.png" alt="WhatsApp" class="icon">
         </div>
-    </header>
-
-    <section class="hero">
-        <div class="hero-overlay">
-            <img src="logo.png" alt="Hero Logo" class="hero-logo-center">
-            <div class="hero-text">
-                <h1>Welcome to Our Site</h1>
-                <p>We provide top-quality services to make your life easier.</p>
-            </div>
+        <div class="link-group">
+          <a href="" target="_blank">Instagram</a>
+          <img src="Insta.png" alt="Instagram" class="icon">
         </div>
-    </section>
+      </div>
+    </div>
+  </header>
 
-    <section class="about" id="about">
-        <div class="about-content">
-            <div class="about-text">
-                <h2>About Us</h2>
-                <p>We are professionals in handyman services with years of experience.</p>
-            </div>
-            <img src="logo.png" alt="About Logo" class="about-logo">
-        </div>
-    </section>
+  <section class="hero">
+    <div class="hero-overlay">
+      <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
+      <div class="hero-text">
+        <h1>Making Your Home Perfect</h1>
+        <p>Your Trusted Handyman in NYC</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="services" id="services">
-        <h2>Our Services</h2>
-        <div class="services-grid">
-            <div class="service">
-                <img src="service1.jpg" alt="Service 1">
-                <p>Electrical Work</p>
-            </div>
-            <div class="service">
-                <img src="service2.jpg" alt="Service 2">
-                <p>Plumbing</p>
-            </div>
-        </div>
-    </section>
+  <section class="about">
+    <div class="about-content">
+      <div class="about-text">
+        <h2>We've Got You Covered</h2>
+        <h3>...</h3>
+      </div>
+      <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
+    </div>
+  </section>
 
-    <section class="gallery" id="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery-grid">
-            <img src="gallery1.jpg" alt="Gallery 1">
-            <img src="gallery2.jpg" alt="Gallery 2">
-            <img src="gallery3.jpg" alt="Gallery 3">
-            <img src="gallery4.jpg" alt="Gallery 4">
-        </div>
-    </section>
+  <section class="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <!-- all your services -->
+    </div>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Your Company. All rights reserved.</p>
-        <div class="socials">
-            <a href="#">FB</a>
-            <a href="#">IG</a>
-        </div>
-    </footer>
+  <section class="gallery">
+    <h2>Our Work</h2>
+    <div class="gallery-grid">
+      <img src="1.jpg" alt="Project 1">
+      <img src="2.jpg" alt="Project 2">
+      <!-- ... -->
+      <img src="10.jpg" alt="Project 10">
+    </div>
+  </section>
 
-    <script src="script.js"></script>
+  <footer>
+    <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbon.tj@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+    <div class="socials">
+      <a href="" target="_blank">Instagram</a>
+      <a href="" target="_blank">WhatsApp</a>
+      <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
+    </div>
+    <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
