--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="about-content">
       <div class="about-text">
         <h2>We've Got You Covered</h2>
-        <h3>...</h3>
+        <h3>Whether it's a leaky faucet, a fresh coat of paint, or a complete home makeover, we're here to help.</h3>
       </div>
       <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
     </div>
@@ -54,7 +54,14 @@
   <section class="services">
     <h2>Our Services</h2>
     <div class="services-grid">
-      <!-- all your services -->
+      <div class="service-card">TV Mounting</div>
+      <div class="service-card">Door Lock Installation</div>
+      <div class="service-card">Furniture Assembly</div>
+      <div class="service-card">Curtain Rods & Blinds</div>
+      <div class="service-card">Light Fixtures</div>
+      <div class="service-card">Painting & Touch-ups</div>
+      <div class="service-card">Shelves & Frames Hanging</div>
+      <div class="service-card">Small Renovations</div>
     </div>
   </section>
 
@@ -63,7 +70,13 @@
     <div class="gallery-grid">
       <img src="1.jpg" alt="Project 1">
       <img src="2.jpg" alt="Project 2">
-      <!-- ... -->
+      <img src="3.jpg" alt="Project 3">
+      <img src="4.jpg" alt="Project 4">
+      <img src="5.jpg" alt="Project 5">
+      <img src="6.jpg" alt="Project 6">
+      <img src="7.jpg" alt="Project 7">
+      <img src="8.jpg" alt="Project 8">
+      <img src="9.jpg" alt="Project 9">
       <img src="10.jpg" alt="Project 10">
     </div>
   </section>
